--- a/about.html
+++ b/about.html
@@ -1,1 +1,4 @@
 about
+Solana Imani Rowe (lahir 8 November 1990),[3] atau lebih dikenal dengan SZA merupakan penyanyi R&B asal Amerika Serikat. Ia lahir di Saint Louis, Missouri, 
+lalu berpindah ke Maplewood, New Jersey.[1][4] Pada Oktober 2012, SZA merilis album mini pertamanya berjudul See.SZA.Run, kemudian ia merilis album mini keduanya S di April 2013. 
+Pada Juli 2013, ia menandatangani kontrak bersama label rekaman Top Dawg Entertainment, lalu merilis album mini Z pada April 2014.[5] SZA merilis album studio debutnya pada 9 Juni 2017 berjudul Ctrl.[6]
